Continue network explanation

--- a/first/Marco_Casari_first_part.ipynb
+++ b/first/Marco_Casari_first_part.ipynb
@@ -5,7 +5,7 @@
    "metadata": {},
    "source": [
     "# Introduction to data analysis for natural and social sciences\n",
-    "The present notebook contitutes the first part of the exam. Data and initial simulations of article \"Patient-specific Boolean models of signalling networks guide personalised treatments\" are partially analysed and reproduced.\n",
+    "The present notebook contitutes the first part of the exam. Portions of data analysis and simulations present in article \"Patient-specific Boolean models of signalling networks guide personalised treatments\" are reproduced.\n",
     "\n",
     "Notebook content is based on version 2 of the article, published April 18, 2022 (DOI: https://doi.org/10.7554/eLife.72626)."
    ]
@@ -41,9 +41,9 @@
    "metadata": {},
    "source": [
     "# Prostate Boolean model construction\n",
-    "The prostate Boolean model is built starting from information available in existing literature. A generic cancer Boolean network is used as baseline, which contains information on pathways and interactions between nodes of the underlying signalling network which are commonly found in turmors.\n",
+    "The prostate Boolean model is built starting from information available in existing literature. A generic cancer Boolean network is used as baseline, which contains information on pathways and interactions between nodes of the underlying signalling network which are commonly found in turmors. Nodes of the network are elements of the regulatory for instance genes, proteins, environent conditions, expression factors. lements of the regulatory  genes, proteins, conditions, expression factors.\n",
     "\n",
-    "MC explain what are nodes of the network: genes, proteins, conditions, expression factors.\n",
+    "MC check nodes as examples of genes, proteins, conditions etc.\n",
     "\n",
     "Then the initial model is enriched with prostate cancer-specific information, e.g. genes, pathways. Software ROMA is used to identify new pathways from transcriptomics and proteomics data, by selecting the highly variable genes for each pathway. Transcriptomics data was gathered from TCGA database selecting gene sets related to cancer database. MC what? pagina 3.\n",
     "\n",
