End summary first report

--- a/first/Marco_Casari_first_part.ipynb
+++ b/first/Marco_Casari_first_part.ipynb
@@ -59,13 +59,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
    "execution_count": 56,
    "metadata": {},
    "outputs": [
@@ -2114,13 +2107,19 @@
     "\n",
     "Authors used their PROFILE methodology to integrate TCGA prostate cancer data of 488 patients into the wild type model. In particular mutation and Copy Number Alteration (CNA) data and continuous data from RNA sequencing are analysed to insert variations into the model specific to each patient. Depending on the data type, the effects are different: the value of a node affected by mutation or CNA is set permanently to 0 or 1 depending on the effect of the alteration, while expression data are converted to specific transition rates and initial conditions. The biological interpretation of these rules is the permanent alteration of node states if genetic mutations are present and in the variation of the signal transmitted between nodes due to the regulation of gene expression. Logical rules are not affected by any change.\n",
     "\n",
-    "Additional details on the procedure are explained in Appendix 3, Appendix 4 and Section \"Personalisation of the prostate Boolean model\".\n",
+    "Additional details on the procedure are explained in Appendix 3, Appendix 4, subsection \"Personalisation of the prostate Boolean model\" in Section \"Results\" and subsection \"Data tailoring the Boolean model\" in Section \"Materials and methods\".\n",
     "\n",
     "## Personalised drug predictions of TCGA Boolean models\n",
+    "The 488 personalised prostate Boolean models are used to get insights on possible drug treatments. Authors studied which genes, when inhibited, caused the inhibition of phenotype \"Proliferation\" or the activation of \"Apoptosis\". Furthermore, this search was extended to comprehend combinations of treatments.\n",
     "\n",
-    "## Personalised drug predictions of LNCaP Boolean model\n",
+    "Identify these particular genes in each patient translates to the possiblity to create personalised treatments, where the outcomes of the drug effects on the regulatory network of each patient are simulated with their respective prostate Boolean model.\n",
     "\n",
-    "# Experimental validation"
+    "Additional details on the results of the analysis are presented in Appendix 4.2, subsection \"Personalised drug predictions of TCGA Boolean models\" in Section \"Results\" and subsection \"Data tailoring the Boolean model\" in Section \"Materials and methods\".\n",
+    "\n",
+    "## Personalised drug predictions of LNCaP Boolean model and experimental validations\n",
+    "To investigate the validity of the predictions of the personalised prostate Boolean models, drug assays are performed on selected cell lines. In particular, cell line LNCaP is chosen for in silico simulation and as comparison with the results of in vitro drug perturbation experiments.\n",
+    "\n",
+    "These topics are not part of the course, hence only references to the article sections are provided: Appendices from 5 to 8, subsections \"Personalised drug predictions of LNCaP Boolean model\", \"Experimental validation of predicted targets\", \"Experimental validation of drugs in LNCaP\" in Section \"Results\" and subsections from \"High-throughput mutant analysis of Boolean models\" to \"Real-time cell electronic sensing (RT-CES) cytotoxicity assay\" in Section \"Materials and methods\"."
    ]
   }
  ],
