Continue first subsection
Update notes.

--- a/second/Marco_Casari_second_part.tex
+++ b/second/Marco_Casari_second_part.tex
@@ -1,4 +1,4 @@
-\documentclass[a4paper]{article}
+\documentclass[a4paper,twocolumn]{article}
 \usepackage[hidelinks]{hyperref}
 
 \title{Introduction to data analysis for natural and social sciences}
@@ -31,7 +31,7 @@ Results sections ``Modeling repertoire variation'' and ``Inferring the noise pro
 The article introduces a probabilistic model able to estimate the noise and describe clonotypes expansion in longitudinal Repertoire Sequencing data (RepSeq).
 Next Generation Sequencing (NGS) provides large amounts of RepSeq data, which standard inference methods fails to describe accurately due to experimental noise and biological diversity. Many factors contribute to the noise: some are related to the experiment execution (e.g. sampling procedure, library preparation), others have biological origin (e.g. gene expression). These factors introduce variability in sequence counts which is not related to the natural variability of T-Cell Receptors (TCRs).
 
-The model introduced in the article is able to decouple the noise distribution from the clonotype counts distribution, learning parameters of both from RepSeq data. Additionally, once the parameters are learned, a Bayesian approach can be used to 
+The model presented in the article is able to decouple the noise distribution from the clonotype counts distribution, learning parameters of both from RepSeq data. Additionally, once the parameters are learned, a Bayesian approach can be used to ...
 
 % MC the model is composed by three building blocks.
 % MC explain also the noise: The noise is over-dispersed with respect to Poisson distribution, hence a different model is considered, tipically a Negative Binomial (NegBin) distribution.  greater dispersion than Poisson distribution Noise is not described by the Poisson distribution, hence a different ...
@@ -45,16 +45,13 @@ The model consists in three main parts, identified by the noise model, the clone
 
 % MC explain in detail the characteristics of each distribution.
 
-The noise model $P(n_i|f_i)$ is a conditional probability of cell counts $n_i$ of the $i$-th clonotype given the true frequency $f_i$. This definition is necessary because RepSeq experiments supply a cell count for each clonotype, which is not the true frequency, but is a noisy function of it nonetheless.
-The index is a label to identify each clonotype: $i = 1, \dots, N$, with $N$ total number of clonotypes in the immune system%, which is not known an estimate for quantity $N$. % MC approfondire se necessario.
-%
-\footnote{Clonotype index is omitted when the meaning of variables is clear.}
+The noise model $P(n_i|f_i)$ is a conditional probability of cell counts $n_i$ of the $i$-th clonotype given the true frequency $f_i$. This definition is necessary because frequencies $f_i$ are not known, since RepSeq experiments supply a cell count for each clonotype and it is a noisy function of the frequency.
+Index $i = 1, \dots, N$ is a label to identify each clonotype, with $N$ total number of clonotypes in the immune system. This value is not known either, the total number of counts $N_\mathrm{read}$ is used instead.%
+\footnote{Clonotype index is omitted when the meaning of variables is clear.} % MC remove this footnote is useless.
 
+Three functional forms has been selected for the noise model: Poisson distribution, negative binomial distribution and a two-step model. Poisson distribution is set with mean $\bar{n}_i = f_i N_\mathrm{read}$ but it is not effective in reproducing observed noise because of its smaller variance. The negative binomial distribution has mean $\bar{n}_i$ and variance $\bar{n}_i + a \bar{n}_i^\gamma$ % MC continue...
 
-
-
-To build the model, three steps are involved which correspond the definition % MC non mi piace, cambiare termine
-of the three main parts.
+To build the model, three steps are involved, one for the characterisation of each model part.
 
 % MC explain here the steps done to find the parameters, the one for noise is explained in the next section.
 
@@ -64,6 +61,8 @@ of the three main parts.
 , each one dedicated to is composed by three interacting parts, which are 
 
 % MC more on noise: how it is dispersed, their solutions and reasons to choose each solution.
+
+% MC in the paper $t$ and $t'$ are instants before and after the vaccination.
 
 \subsection{Inferring the noise profile from replicate experiments}
 
